# render-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  game_window.cpp  game_window.h  main.c  main.cpp  recompile_shaders.sh  reimport_textures.sh  utils.h
core/: CMakeLists.txt  core_components_register.cpp  core_components_register.h  global_constants.h
core/bounds/: bounds.cpp  bounds.h
core/camera/: camera.cpp  camera.h
core/component/: component.cpp  component.h
core/core_debug/: debug.cpp  debug.h
core/cubemap/: cubemap.cpp  cubemap.h
core/culling/: frustum.cpp  frustum.h
core/developer_console/: developer_console.cpp  developer_console.h
core/drawable_geometry/: drawable_geometry.cpp  drawable_geometry.h
core/editor/: hierarchy.cpp  hierarchy.h
core/fbx_asset/: fbx_asset.cpp  fbx_asset.h
core/file_system/: file_system.cpp  file_system.h  file_watcher.cpp  file_watcher.h
core/font/: font.cpp  font.h  font_binary_reader.cpp  font_binary_reader.h  font_data.h
core/gameObject/: gameObject.cpp  gameObject.h
core/gizmos/: gizmos.cpp  gizmos.h  gizmos_pass.cpp  gizmos_pass.h
core/graphics/: context.cpp  context.h  draw_call_info.cpp  draw_call_info.h  graphics.cpp  graphics.h  graphics_settings.cpp  graphics_settings.h  render_data.cpp  render_data.h  render_settings.cpp  render_settings.h  uniform_block.cpp  uniform_block.h
core/graphics_buffer/: graphics_buffer.cpp  graphics_buffer.h  graphics_buffer_view.cpp  graphics_buffer_view.h  graphics_buffer_wrapper.cpp  graphics_buffer_wrapper.h  ring_buffer.cpp  ring_buffer.h
core/input/: input.cpp  input.h
core/json_common/: json_common.cpp  json_common.h
core/light/: light.cpp  light.h  light_data.h
core/lines/: lines.cpp  lines.h
core/material/: material.cpp  material.h  material_parser.cpp  material_parser.h
core/mesh/: mesh.cpp  mesh.h  mesh_binary_reader.cpp  mesh_binary_reader.h  mesh_header.h
core/native_bridge/: native_bridge_android.cpp  native_bridge_android.h  native_bridge_apple.cpp  native_bridge_apple.h  native_bridge_common.h
core/point/: point.cpp  point.h
core/property_block/: property_block.cpp  property_block.h
core/raytracing/: raytracing_pass.cpp  raytracing_pass.h  raytracing_scene.cpp  raytracing_scene.h
core/renderer/: billboard_renderer.cpp  billboard_renderer.h  mesh_renderer.cpp  mesh_renderer.h  renderer.cpp  renderer.h
core/resources/: resource.h  resources.cpp  resources.h
core/scene/: scene.cpp  scene.h  scene_parser.cpp  scene_parser.h
core/shader/: shader.cpp  shader.h  shader_structs.h  uniform_type.h
core/texture/: texture.cpp  texture.h  texture_binary_reader.cpp  texture_binary_reader.h  texture_header.h
core/texture_2d/: texture_2d.cpp  texture_2d.h
core/texture_2d_array/: texture_2d_array.cpp  texture_2d_array.h
core/time/: time.cpp  time.h
core/ui/: ui_button.cpp  ui_button.h  ui_element.cpp  ui_element.h  ui_event_info.h  ui_image.cpp  ui_image.h  ui_manager.cpp  ui_manager.h  ui_mask.cpp  ui_mask.h  ui_mask_stencil.cpp  ui_mask_stencil.h  ui_native_keyboard.cpp  ui_native_keyboard.h  ui_render_pass.cpp  ui_render_pass.h  ui_text.cpp  ui_text.h  ui_text_field.cpp  ui_text_field.h
core/uniform_block/: uniform_block.cpp  uniform_block.h
core/utils/: utils.cpp  utils.h
core/worker/: worker.cpp  worker.h
editor_gui/: CMakeLists.txt  editor_window.cpp  editor_window.h  editor_window.ui
editor_gui/hierarchy_gui/: hierarchy_gui.cpp  hierarchy_gui.h
editor_gui/hierarchy_widget/: hierarchy_tree_widget.cpp  hierarchy_tree_widget.h  hierarchy_tree_widget_item.cpp  hierarchy_tree_widget_item.h  hierarchy_widget.cpp  hierarchy_widget.h  hierarchy_widget.ui
font_compiler/: CMakeLists.txt  font_compiler.cpp
game_window/: CMakeLists.txt  game_window.cpp  game_window.h  top_menu_bar.cpp  top_menu_bar.h  window_manager.cpp  window_manager.h
game_window/game_window_implementations/: game_window_metal.cpp  game_window_metal.h  game_window_opengl.cpp  game_window_opengl.h  game_window_platform_apple.cpp  game_window_platform_apple.h  game_window_platform_windows.cpp  game_window_platform_windows.h
game_window/windows/: base_window.cpp  base_window.h  debug_console_window.cpp  debug_console_window.h  graphics_settings_window.cpp  graphics_settings_window.h  profiler_window.cpp  profiler_window.h  scene_hierarchy_window.cpp  scene_hierarchy_window.h  texture_viewer_window.cpp  texture_viewer_window.h  windows_id_pool.cpp  windows_id_pool.h
graphics_backend/: CMakeLists.txt  graphics_backend.cpp  graphics_backend.h  graphics_backend_api.cpp  graphics_backend_api.h  graphics_backend_debug.cpp  graphics_backend_debug.h  graphics_backend_debug_group.cpp  graphics_backend_debug_group.h
graphics_backend/enums/: blend_factor.h  blit_framebuffer_filter.h  blit_framebuffer_mask.h  buffer_bind_target.h  buffer_type.h  buffer_usage_hint.h  clear_mask.h  color_write_mask.h  comparison_function.h  cubemap_face.h  cull_face.h  cull_face_orientation.h  depth_function.h  fence_type.h  framebuffer_attachment.h  framebuffer_target.h  gpu_queue.h  graphics_backend_capability.h  graphics_backend_name.h  indices_data_type.h  load_action.h  primitive_type.h  program_interface.h  program_interface_parameter.h  program_parameter.h  program_resource_parameter.h  program_type.h  (+21 more)
model_compiler/: CMakeLists.txt  model_compiler.cpp
shader_compiler/: CMakeLists.txt  defines.h  graphics_backend.h  main.cpp  reflection.h  reflection_common.h  reflection_dxc.h  reflection_spirv.h  serialization.h
texture_compressor/: CMakeLists.txt  texture_compressor.cpp  texture_compressor_backend.cpp  texture_compressor_backend.h  texture_compressor_formats.cpp  texture_compressor_formats.h  texture_compressor_settings.cpp  texture_compressor_settings.h  texture_compressor_settings.ui
utils/: CMakeLists.txt  arguments.cpp  arguments.h  debug.cpp  hash.cpp  hash.h  lodepng.cpp  lodepng.h  string_encoding_util.cpp  string_encoding_util.h  string_split.cpp  string_split.h  texture_binary_reader.cpp  texture_binary_reader.h  utils.c  utils.cpp  utils.h
(+451 files in other folders)
