add_library(
	Core
	gameObject/gameObject.h
	gameObject/gameObject.cpp
	mesh/mesh.cpp
	mesh/mesh.h
	light/light.h
	shader/shader.h
	shader/shader.cpp
	texture_2d/texture_2d.cpp
	texture_2d/texture_2d.h
	material/material.cpp
	material/material.h
	scene/scene.h
	scene/scene.cpp
	input/input.cpp
	input/input.h
	graphics/graphics.cpp
	graphics/graphics.h
	camera/camera.cpp
	camera/camera.h
	time/time.cpp
	time/time.h
	graphics/uniform_block.cpp
	graphics/uniform_block.h
	graphics/context.cpp
	graphics/context.h
	graphics/passes/shadow_caster_pass.cpp
	graphics/passes/shadow_caster_pass.h
	graphics/passes/render_pass.cpp
	graphics/passes/render_pass.h
	texture_2d_array/texture_2d_array.cpp
	texture_2d_array/texture_2d_array.h
	cubemap/cubemap.cpp
	cubemap/cubemap.h
	graphics/passes/skybox_pass.cpp
	graphics/passes/skybox_pass.h
	fbx_asset/fbx_asset.cpp
	fbx_asset/fbx_asset.h
	texture/texture.cpp
	texture/texture.h
	texture/texture_header.h
	shader/shader_loader/shader_loader.cpp
	shader/shader_loader/shader_loader.h
	shader/uniform_info/uniform_info.h
	renderer/renderer.cpp
	renderer/renderer.h
	renderer/mesh_renderer.cpp
	renderer/mesh_renderer.h
	renderer/billboard_renderer.cpp
	renderer/billboard_renderer.h
	bounds/bounds.h
	bounds/bounds.cpp
	editor/gizmos/gizmos_pass.h
	editor/gizmos/gizmos_pass.cpp 
	editor/gizmos/gizmos.h 
	editor/gizmos/gizmos.cpp
	editor/hierarchy.h
	editor/hierarchy.cpp
	property_block/property_block.h
	property_block/property_block.cpp
	graphics/render_settings.h
	graphics/render_settings.cpp
	graphics/draw_call_info.h
	graphics/draw_call_info.cpp
	point/point.h
	point/point.cpp 
	drawable_geometry/drawable_geometry.h
	drawable_geometry/drawable_geometry.cpp
	texture/texture_binary_reader.h
	texture/texture_binary_reader.cpp)

target_include_directories(Core PUBLIC .)
target_link_libraries(Core Math Utils DebugUtil OpenFBX GraphicsBackend)