add_library(
	Core
	gameObject/gameObject.h
	gameObject/gameObject.cpp
	mesh/mesh.cpp
	mesh/mesh.h
	light/light.cpp
	light/light.h
	shader/shader.h
	shader/shader.cpp
	texture_2d/texture_2d.cpp
	texture_2d/texture_2d.h
	material/material.cpp
	material/material.h
	scene/scene.h
	scene/scene.cpp
	input/input.cpp
	input/input.h
	graphics/graphics.cpp
	graphics/graphics.h
	camera/camera.cpp
	camera/camera.h
	time/time.cpp
	time/time.h
	graphics_buffer/graphics_buffer.cpp
	graphics_buffer/graphics_buffer.h
	graphics/context.cpp
	graphics/context.h
	graphics/passes/shadow_caster_pass.cpp
	graphics/passes/shadow_caster_pass.h
	graphics/passes/render_pass.cpp
	graphics/passes/render_pass.h
	texture_2d_array/texture_2d_array.cpp
	texture_2d_array/texture_2d_array.h
	cubemap/cubemap.cpp
	cubemap/cubemap.h
	graphics/passes/skybox_pass.cpp
	graphics/passes/skybox_pass.h
	texture/texture.cpp
	texture/texture.h
	texture/texture_header.h
	shader/shader_loader/shader_loader.cpp
	shader/shader_loader/shader_loader.h
	renderer/renderer.cpp
	renderer/renderer.h
	renderer/mesh_renderer.cpp
	renderer/mesh_renderer.h
	renderer/billboard_renderer.cpp
	renderer/billboard_renderer.h
	bounds/bounds.h
	bounds/bounds.cpp
	editor/gizmos/gizmos_pass.h
	editor/gizmos/gizmos_pass.cpp 
	editor/gizmos/gizmos.h 
	editor/gizmos/gizmos.cpp
	editor/hierarchy.h
	editor/hierarchy.cpp
	graphics/render_settings/render_settings.h
	graphics/draw_call_info.h
	point/point.h
	point/point.cpp 
	drawable_geometry/drawable_geometry.h
	drawable_geometry/drawable_geometry.cpp
	texture/texture_binary_reader.h
	texture/texture_binary_reader.cpp
	shader/shader_loader/shader_parser.cpp
	shader/shader_loader/shader_parser.h
	shader/shader_structs.h
	lines/lines.cpp
	lines/lines.h
	graphics/data_structs/shadows_data.h
	graphics/data_structs/lighting_data.h
	graphics/data_structs/camera_data.h
	graphics_buffer/graphics_buffer_wrapper.h
	graphics_buffer/graphics_buffer_wrapper.cpp
	graphics/render_settings/draw_call_comparer.h
	graphics/render_settings/draw_call_comparer.cpp
	graphics/render_settings/draw_call_filter.cpp
	graphics/render_settings/draw_call_filter.h
	global_constants.h
	graphics/passes/final_blit_pass.cpp
	graphics/passes/final_blit_pass.h
	editor/selection_outline/selection_outline_pass.cpp
	editor/selection_outline/selection_outline_pass.h
	graphics/graphics_settings.cpp
	graphics/graphics_settings.h
	drawable_geometry/vertex_attributes/vertex_attributes.cpp
	drawable_geometry/vertex_attributes/vertex_attributes.h
	graphics_buffer/ring_buffer.cpp
	graphics_buffer/ring_buffer.h
	file_system/file_system.cpp
	file_system/file_system.h
	graphics/passes/draw_renderers_pass.cpp
	graphics/passes/draw_renderers_pass.h
	graphics/passes/forward_render_pass.cpp
	graphics/passes/forward_render_pass.h
	editor/copy_depth/copy_depth_pass.cpp
	editor/copy_depth/copy_depth_pass.h
	graphics/render_queue/render_queue.cpp
	graphics/render_queue/render_queue.h
	editor/profiler/profiler.cpp
	editor/profiler/profiler.h
	file_system/file_system_implementations/file_system_base.h
	file_system/file_system_implementations/file_system_base.cpp
	file_system/file_system_implementations/file_system_windows.cpp
	file_system/file_system_implementations/file_system_windows.h
	file_system/file_system_implementations/file_system_apple.cpp
	file_system/file_system_implementations/file_system_apple.h
	file_system/file_system_implementations/file_system_android.cpp
	file_system/file_system_implementations/file_system_android.h
	editor/debug_pass/shadow_map_debug_pass.cpp
	editor/debug_pass/shadow_map_debug_pass.h
	component/component.h
	component/component.cpp
	material/material_parser.h
	material/material_parser.cpp
	scene/scene_parser.h
	scene/scene_parser.cpp
	core_components_register.h
	core_components_register.cpp
	json_common/json_common.h
	json_common/json_common.cpp
	resources/resources.h
	resources/resources.cpp
	resources/resource.h
	mesh/mesh_binary_reader.cpp
	mesh/mesh_binary_reader.h
	mesh/mesh_header.h
	worker/worker.h
	worker/worker.cpp
	culling/frustum.h
	culling/frustum.cpp
	ui/ui_manager.cpp
	ui/ui_manager.h
	ui/ui_image.cpp
	ui/ui_image.h
	ui/ui_text.cpp
	ui/ui_text.h
	ui/ui_element.cpp
	ui/ui_element.h
	ui/ui_render_pass.cpp
	ui/ui_render_pass.h
	font/font.cpp
	font/font.h
	font/font_data.h
	ui/ui_button.cpp
	ui/ui_button.h
	ui/ui_event_info.h
	ui/ui_text_field.cpp
	ui/ui_text_field.h)

target_include_directories(Core PUBLIC .)
target_link_libraries(Core Math DebugUtil Hash GraphicsBackend AppleFoundation nlohmann_json::nlohmann_json trex)